--- a/javascript-basics-01/Step_1.html
+++ b/javascript-basics-01/Step_1.html
@@ -3,7 +3,11 @@
     <head>
         <title>Step 1</title>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="Step_1.js"></script>
     </head>
     <body>
+        <script>
+            window.alert(name);
+            </script>
     </body>
 </html>
