--- a/javascript-basics-01/Step_2.html
+++ b/javascript-basics-01/Step_2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script type="text/javascript" src="Step_2.js"></script>
         <title>Step 2</title>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body onload="printbox()">
+        
     </body>
 </html>
