--- a/javascript-basics-01/Step_3.html
+++ b/javascript-basics-01/Step_3.html
@@ -3,7 +3,14 @@
     <head>
         <title>Step 3</title>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="Step_3.js"></script>
     </head>
     <body>
+        <p>Insert your name</p>      
+      <form id="user">
+          First Name:<input type="text" id="firstName"><br>
+          Last Name:<input type="text" id="lastName"><br>
+         <button onclick ="userInput();">Submit</button>
+      </form>  
     </body>
 </html>
