--- a/javascript-basics-01/Step_6.html
+++ b/javascript-basics-01/Step_6.html
@@ -3,12 +3,13 @@
     <head>
         <title>Step 6</title>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="Step_6.js"></script>
     </head>
     <body>
-        <form>
+        <form id="user">
             <label for="first_number">first number : </label><input type="text" id="first_number" name="first_number"/><br/>
             <label for="second_number">second number : </label><input type="text" id="second_number" name="second_number"/><br/>
-            <button  id="validate" name ="validate">validate</button>
+            <button  id="validate" name ="validate" onclick="userInput()">validate</button>
         </form>
     </body>
 </html>
