--- a/javascript-basics-01/Step_7.html
+++ b/javascript-basics-01/Step_7.html
@@ -3,12 +3,13 @@
     <head>
         <title>Step 7</title>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="Step_7.js"></script>
     </head>
     <body>
-        <form>
+        <form id="user">
             <label for="shoe_size">shoe size : </label><input type="text" id="shoe_size" name="shoe_size"/><br/>
             <label for="year">Birth year : </label><input type="text" id="year" name="year"/><br/>
-            <button id="validate" name="validate">validate</button>
+            <button id="validate" name="validate" onclick="userInput()">validate</button>
         </form>
     </body>
 </html>
