--- a/javascript-basics-02/step 1/index.html
+++ b/javascript-basics-02/step 1/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="index.js"></script>
     <title>Step 1</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1" />
+    
+      <img src="images/image1.jpg" id="image1" class="image" onmouseover = "changePic1()"onmouseout= "changePic2()"/>
+      
   </body>
 </html>
