--- a/javascript-basics-02/step 2/index.html
+++ b/javascript-basics-02/step 2/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script type="text/javascript" src="index.js"></script>
   <title>Step 2</title>
 </head>
 <body>
   <form>
-    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
+    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name" onblur="myFunction()"/>
   </form>
 </body>
 </html>
