--- a/javascript-basics-02/step 3/index.html
+++ b/javascript-basics-02/step 3/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script type="text/javascript" src="index.js"></script>
   <title>Step 3</title>
 </head>
 <body>
   <form>
     <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
+    <div>
+      hey
+    </div>
   </form>
 </body>
 </html>
