JS Basics 02 Step 4

--- a/javascript-basics-02/step 4/index.html
+++ b/javascript-basics-02/step 4/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
+  
   <title>Step 4</title>
 </head>
 <body>
-  <form>
+  <form id="reset">
     <label for="name">Your name  : </label><input type="text" name="name" value="Doe" id="name" />
     <label for="surname">Your surname  : </label><input type="text" name="surname" value="John" id="surname" />
     <label for="city">Your city  : </label><input type="text" name="city" value="New York" id="city" />
-    <button type="button" name="button">Reset</button>
+    <button type="button" name="button" onclick="reset()">Reset</button>
+    <script type="text/javascript" src="index.js"></script>
   </form>
+  
 </body>
 </html>
