JS Basics 02 Step 5

--- a/javascript-basics-02/step 5/index.html
+++ b/javascript-basics-02/step 5/index.html
@@ -11,6 +11,7 @@
       <img src="images/image3.jpg" id="image3" />
       <img src="images/image4.jpg" id="image4" />
       <img src="images/image5.jpg" id="image5" />
+      <script type="text/javascript" src="index.js"></script>
     </div>
   </body>
 </html>
