--- a/javascript-basics-03/step 1/index.html
+++ b/javascript-basics-03/step 1/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    
     <title>Step 1</title>
   </head>
   <body>
       <img src="images/image1.jpg" id="image1"/>
+      <script type="text/javascript" src="index.js"></script>
+      
   </body>
 </html>
