--- a/javascript-basics-03/step 3/index.html
+++ b/javascript-basics-03/step 3/index.html
@@ -14,5 +14,6 @@
   <div class="color red" ></div>
   <div class="color blue" ></div>
 </div>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
