--- a/javascript-basics-03/step 4/index.html
+++ b/javascript-basics-03/step 4/index.html
@@ -10,5 +10,6 @@
     <label for="confirmation">Confirm : </label><input type="text" name="confirmation" value="" id="confirmation" />
     <button type="button" name="button" >Test</button>
   </form>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
